# data_market_index_api

./: .gitignore  README.md  pyproject.toml
data/: ibovespa_diario.csv
src/data_market_index_api/: main.py
src/data_market_index_api/routes/: fetcher.py  health.py
src/data_market_index_api/services/: fetcher.py
tests/: test_fetcher.py  test_health.py
