[tool.poetry]
name = "data-market-index-api"
version = "0.1.0"
description = "API for Data Indexes Fetcher"
authors = ["Flavio Lopes"]
license = "Creative Commons"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
data-market-index-fetcher = "^1.1.1"
httpx = "^0.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
